--- a/index.html
+++ b/index.html
@@ -146,9 +146,9 @@
             </section>
 
             <section>
-                <a target="_bLank" href="#">#</a><br>
-                <a target="_bLank" href="#">#</a><br>
-                <a target="_bLank" href="#">#</a>
+                <a target="_bLank" href="https://isaac12s0.github.io/bullfishinvestments-07-22/">https://isaac12s0.github.io/bullfishinvestments-07-22/</a><br>
+                <a target="_bLank" href="http://bullfishinvestments-07-22.s3-website-us-east-1.amazonaws.com/">http://bullfishinvestments-07-22.s3-website-us-east-1.amazonaws.com/</a><br>
+                <a target="_bLank" href="https://zippy-semifreddo-faac6c.netlify.app/">https://zippy-semifreddo-faac6c.netlify.app/</a>
             </section>
 
         </div>
